--- a/game.html
+++ b/game.html
@@ -1,78 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>DarkCoin</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DarkCoin</title>
 
 <style>
-*{
-margin:0;
-padding:0;
-font-family:Arial, sans-serif;
-color:white;
-}
-
+*{margin:0;padding:0;color:white;font-family:Arial;}
 body{
 background:black;
 overflow:hidden;
 }
 
-/* Skull animated background */
+/* animated skull bg */
 .skull-bg{
 position:fixed;
 width:200%;
 height:200%;
-background:url("https://i.imgur.com/4n7X6qD.png");
-opacity:0.05;
-animation:moveSkulls 60s linear infinite;
-z-index:-2;
+background:url("skulls.png");
+opacity:0.07;
+animation:skullMove 80s linear infinite;
+z-index:-5;
 }
 
-@keyframes moveSkulls{
+@keyframes skullMove{
 0%{transform:translate(0,0)}
-100%{transform:translate(-50%, -50%)}
+100%{transform:translate(-50%,-50%)}
 }
 
 /* Header */
 header{
 text-align:center;
-font-size:26px;
+font-size:28px;
 font-weight:bold;
-letter-spacing:3px;
-padding:15px;
+letter-spacing:5px;
+padding:10px;
 border-bottom:1px solid rgba(255,255,255,0.1);
-background:rgba(0,0,0,0.6);
-backdrop-filter:blur(10px);
+background:rgba(0,0,0,0.7);
+backdrop-filter:blur(8px);
 }
 
 /* Coin */
 .coin{
-width:220px;
-height:220px;
-margin:80px auto 20px;
+width:180px;
+height:180px;
+margin:60px auto 10px;
 border-radius:50%;
 background:url("darkcoin.png") no-repeat center/contain;
-filter:drop-shadow(0 0 40px rgba(255,255,255,0.5));
-animation:float 3s ease-in-out infinite, spin 20s linear infinite;
+filter:drop-shadow(0 0 40px white);
+animation:float 3s ease-in-out infinite, spin 18s linear infinite;
 cursor:pointer;
 }
 
 @keyframes float{
 0%,100%{transform:translateY(0)}
-50%{transform:translateY(-20px)}
+50%{transform:translateY(-15px)}
 }
 
 @keyframes spin{
-0%{transform:rotate(0deg)}
-100%{transform:rotate(360deg)}
+0%{transform:rotateY(0deg)}
+100%{transform:rotateY(360deg)}
 }
 
 /* Balance */
 .balance{
 text-align:center;
 font-size:22px;
-margin-bottom:30px;
+margin-bottom:20px;
 }
 
 /* Buttons */
@@ -83,10 +77,9 @@ gap:15px;
 }
 
 .btn{
-padding:12px 22px;
+padding:12px 20px;
 border:1px solid white;
 background:black;
-cursor:pointer;
 transition:0.3s;
 }
 
@@ -95,53 +88,44 @@ background:white;
 color:black;
 }
 
-/* NFT Market Panel */
+/* NFT Panel */
 .market{
 position:fixed;
 bottom:-100%;
 left:0;
 width:100%;
-height:60%;
+height:65%;
 background:black;
 border-top:2px solid white;
 transition:0.5s;
-padding:15px;
+padding:10px;
 overflow:auto;
 }
 
-.market.active{
-bottom:0;
-}
+.market.active{bottom:0;}
 
 .nft{
 border:1px solid rgba(255,255,255,0.2);
 padding:10px;
-margin:10px 0;
+margin:10px;
 display:flex;
 justify-content:space-between;
 align-items:center;
 }
 
-.nft img{
-width:60px;
-height:60px;
-border-radius:10px;
-}
-
-/* Tap effect */
+/* Tap particles */
 .particle{
 position:absolute;
-width:6px;
-height:6px;
+width:5px;
+height:5px;
 background:white;
 border-radius:50%;
-pointer-events:none;
 animation:explode 1s linear forwards;
+pointer-events:none;
 }
 
 @keyframes explode{
-0%{opacity:1;transform:scale(1)}
-100%{opacity:0;transform:translate(var(--x),var(--y)) scale(0)}
+to{opacity:0;transform:translate(var(--x),var(--y)) scale(0);}
 }
 </style>
 </head>
@@ -157,48 +141,34 @@ animation:explode 1s linear forwards;
 <div class="balance" id="balance">Balance: 0 DC</div>
 
 <div class="buttons">
-<div class="btn" onclick="openMarket()">NFT MARKET</div>
-<div class="btn" onclick="fakeMine()">MINE</div>
+<div class="btn" onclick="toggleMarket()">NFT MARKET</div>
+<div class="btn" onclick="mine()">MINE</div>
 </div>
 
 <div class="market" id="market">
-<h2>NFT Marketplace (P2P)</h2>
+<h2>NFT MARKETPLACE</h2>
 
-<div class="nft">
-<img src="https://i.imgur.com/zv5sYqg.png">
-<span>Skull #001</span>
-<button onclick="buyNFT()">Buy 10 DC</button>
-</div>
+<div class="nft">Skull #001 <button onclick="buyNFT(10)">Buy 10 DC</button></div>
+<div class="nft">Dark Skull #666 <button onclick="buyNFT(50)">Buy 50 DC</button></div>
+<div class="nft">Ultra Skull #999 <button onclick="buyNFT(200)">Buy 200 DC</button></div>
 
-<div class="nft">
-<img src="https://i.imgur.com/zv5sYqg.png">
-<span>Dark Skull #777</span>
-<button onclick="buyNFT()">Buy 25 DC</button>
-</div>
-
-<div class="nft">
-<img src="https://i.imgur.com/zv5sYqg.png">
-<span>Ultra Skull #999</span>
-<button onclick="buyNFT()">Buy 100 DC</button>
-</div>
-
-<div class="btn" onclick="openMarket()">CLOSE</div>
+<div class="btn" onclick="toggleMarket()">CLOSE</div>
 </div>
 
 <script>
-let balance = 0;
-const coin = document.getElementById("coin");
+let balance=0;
+let coin=document.getElementById("coin");
 
-coin.onclick = (e)=>{
+coin.onclick=(e)=>{
 balance++;
 document.getElementById("balance").innerText="Balance: "+balance+" DC";
-tapParticles(e.clientX, e.clientY);
+particle(e.clientX,e.clientY);
 coin.style.transform="scale(0.9)";
 setTimeout(()=>coin.style.transform="",100);
 };
 
-function tapParticles(x,y){
-for(let i=0;i<20;i++){
+function particle(x,y){
+for(let i=0;i<15;i++){
 let p=document.createElement("div");
 p.className="particle";
 p.style.left=x+"px";
@@ -210,18 +180,21 @@ setTimeout(()=>p.remove(),1000);
 }
 }
 
-function openMarket(){
+function toggleMarket(){
 document.getElementById("market").classList.toggle("active");
 }
 
-function fakeMine(){
+function mine(){
 balance+=10;
-alert("You mined 10 DarkCoin");
+alert("+10 DarkCoin");
 document.getElementById("balance").innerText="Balance: "+balance+" DC";
 }
 
-function buyNFT(){
-alert("P2P trade simulation. Real blockchain later.");
+function buyNFT(price){
+if(balance>=price){
+balance-=price;
+alert("NFT purchased!");
+}else alert("Not enough DarkCoin");
 }
 </script>
 
