--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@ overflow:hidden;
 position:fixed;
 width:200%;
 height:200%;
-background:url("skulls.png");
+background:url("https://raw.githubusercontent.com/ROSESER12/darkearn/main/skulls.png");
 opacity:0.07;
 animation:skullMove 80s linear infinite;
 z-index:-5;
