--- a/game.html
+++ b/game.html
@@ -2,117 +2,101 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>DarkCoin</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:Inter,Arial}
+
+*{margin:0;padding:0;font-family:monospace;color:white;}
 body{
-background:#000;
-color:#fff;
-text-align:center;
+background:black;
 overflow:hidden;
 }
 
-/* BACKGROUND GLOW */
-.bg-glow{
+/* animated skull bg */
+.bg{
 position:fixed;inset:0;
-background:radial-gradient(circle at center,#00ffee20,#000 70%);
-z-index:-2;
+background:url('https://i.imgur.com/Vk7XQ2v.png');
+opacity:0.05;
+animation:movebg 60s linear infinite;
 }
+@keyframes movebg{0%{background-position:0 0}100%{background-position:5000px 5000px}}
 
-/* HEADER */
 header{
+text-align:center;
+font-size:26px;
+letter-spacing:5px;
 padding:15px;
-font-size:20px;
-font-weight:bold;
-letter-spacing:3px;
-border-bottom:1px solid #222;
+border-bottom:1px solid white;
 }
 
-/* COIN */
-.coin-box{
-margin-top:60px;
-display:flex;
-flex-direction:column;
-align-items:center;
-}
 .coin{
-width:200px;height:200px;
+width:150px;height:150px;
+border:3px solid white;
 border-radius:50%;
-background:radial-gradient(circle,#111,#000);
-border:2px solid #444;
-box-shadow:0 0 40px #00ffee;
+margin:50px auto;
 display:flex;
 align-items:center;
 justify-content:center;
-animation:spin 10s linear infinite;
-}
-.coin img{
-width:80%;
-filter:drop-shadow(0 0 15px #00ffee);
-}
-
-/* SPIN */
-@keyframes spin{
-0%{transform:rotateY(0deg)}
-100%{transform:rotateY(360deg)}
-}
-
-/* BALANCE */
-.balance{
-margin-top:20px;
 font-size:22px;
-font-weight:bold;
+animation:pulse 2s infinite;
 }
 
-/* BUTTON */
-.mine-btn{
-margin-top:20px;
-padding:15px 50px;
-border:none;
-border-radius:30px;
-font-size:18px;
-font-weight:bold;
-color:black;
-background:linear-gradient(90deg,#00ffee,#00aaff,#aa00ff);
-box-shadow:0 0 30px #00ffee;
+@keyframes pulse{
+0%{transform:scale(1)}
+50%{transform:scale(1.1)}
+100%{transform:scale(1)}
 }
-.mine-btn:active{transform:scale(0.95)}
+
+button{
+background:black;
+border:2px solid white;
+padding:15px 40px;
+font-size:18px;
+cursor:pointer;
+transition:.2s;
+}
+button:hover{
+background:white;color:black;
+}
+
+.nav{
+position:fixed;
+bottom:0;left:0;right:0;
+display:flex;
+justify-content:space-around;
+border-top:1px solid white;
+padding:10px;
+background:black;
+}
+
 </style>
 </head>
-
 <body>
-<div class="bg-glow"></div>
+
+<div class="bg"></div>
 
 <header>DARKCOIN</header>
 
-<div class="coin-box">
-<div class="coin">
-<img src="https://i.imgur.com/6Xb6K4b.png">
-</div>
+<div class="coin" id="balance">0 DC</div>
 
-<div class="balance">Balance: <span id="coins">0</span> DC</div>
+<center>
+<button onclick="tap()">MINE DARKCOIN</button>
+</center>
 
-<button class="mine-btn" onclick="tap()">MINE DARKCOIN</button>
+<div class="nav">
+<div onclick="alert('Mining')">Mine</div>
+<div onclick="alert('NFT Market')">NFT</div>
+<div onclick="alert('Profile')">Profile</div>
 </div>
 
 <script>
 let tg = window.Telegram.WebApp;
 tg.expand();
 
-let coins = Number(localStorage.getItem("coins")) || 0;
-
-function update(){
-document.getElementById("coins").innerText = coins;
-localStorage.setItem("coins", coins);
-}
-update();
-
+let coins = 0;
 function tap(){
-coins++;
-update();
+ coins++;
+ document.getElementById("balance").innerHTML = coins+" DC";
 }
 </script>
 
