--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@ overflow:hidden;
 /* animated skull bg */
 .bg{
 position:fixed;inset:0;
-background:url('https://i.imgur.com/Vk7XQ2v.png');
+background:url("https://raw.githubusercontent.com/USERNAME/REPO/main/skulls.png");
 opacity:0.05;
 animation:movebg 60s linear infinite;
 }
