--- a/game.html
+++ b/game.html
@@ -4,100 +4,207 @@
 <meta charset="UTF-8">
 <title>DarkCoin</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 <style>
+*{margin:0;padding:0;font-family:Inter,monospace;color:white}
+body{background:black;overflow:hidden}
 
-*{margin:0;padding:0;font-family:monospace;color:white;}
-body{
-background:black;
-overflow:hidden;
+/* MATRIX SKULL BACKGROUND */
+canvas{
+position:fixed;inset:0;z-index:-1;
 }
 
-/* animated skull bg */
-.bg{
-position:fixed;inset:0;
-background:url("https://raw.githubusercontent.com/USERNAME/REPO/main/skulls.png");
-opacity:0.05;
-animation:movebg 60s linear infinite;
-}
-@keyframes movebg{0%{background-position:0 0}100%{background-position:5000px 5000px}}
-
+/* HEADER */
 header{
 text-align:center;
+padding:14px;
 font-size:26px;
-letter-spacing:5px;
-padding:15px;
+letter-spacing:6px;
 border-bottom:1px solid white;
 }
 
+/* MAIN PANEL */
+.panel{
+text-align:center;
+margin-top:60px;
+}
+
+/* COIN CORE */
 .coin{
-width:150px;height:150px;
+width:180px;height:180px;
 border:3px solid white;
 border-radius:50%;
-margin:50px auto;
+margin:auto;
 display:flex;
 align-items:center;
 justify-content:center;
-font-size:22px;
-animation:pulse 2s infinite;
+font-size:26px;
+animation:spin 8s linear infinite, pulse 2s infinite;
 }
-
+@keyframes spin{100%{transform:rotate(360deg)}}
 @keyframes pulse{
-0%{transform:scale(1)}
-50%{transform:scale(1.1)}
-100%{transform:scale(1)}
+0%{box-shadow:0 0 0 white}
+50%{box-shadow:0 0 30px white}
+100%{box-shadow:0 0 0 white}
 }
 
-button{
-background:black;
+/* BUTTON */
+.btn{
+margin-top:30px;
+padding:14px 60px;
 border:2px solid white;
-padding:15px 40px;
+background:black;
 font-size:18px;
 cursor:pointer;
 transition:.2s;
 }
-button:hover{
-background:white;color:black;
-}
+.btn:hover{background:white;color:black}
 
-.nav{
+/* MENU */
+.menu{
 position:fixed;
 bottom:0;left:0;right:0;
 display:flex;
 justify-content:space-around;
-border-top:1px solid white;
 padding:10px;
+border-top:1px solid white;
 background:black;
+font-size:14px;
+}
+.menu div{cursor:pointer;opacity:.6}
+.menu div:hover{opacity:1}
+
+/* SCREENS */
+.screen{display:none;padding:20px}
+.active{display:block}
+
+/* TABLE */
+table{
+width:100%;
+border-collapse:collapse;
+margin-top:20px;
+}
+td,th{
+border:1px solid white;
+padding:8px;
+text-align:center;
 }
 
+/* GLITCH TEXT */
+.glitch{
+font-size:28px;
+font-weight:bold;
+position:relative;
+display:inline-block;
+}
+.glitch::before,.glitch::after{
+content:"DARKCOIN";
+position:absolute;left:0;top:0;
+opacity:.6;
+}
+.glitch::before{color:#0ff;animation:gl1 1s infinite}
+.glitch::after{color:#f0f;animation:gl2 1.2s infinite}
+@keyframes gl1{0%{transform:translate(0)}50%{transform:translate(-2px,2px)}}
+@keyframes gl2{0%{transform:translate(0)}50%{transform:translate(2px,-2px)}}
 </style>
 </head>
+
 <body>
 
-<div class="bg"></div>
+<canvas id="bg"></canvas>
 
-<header>DARKCOIN</header>
+<header class="glitch">DARKCOIN</header>
 
+<div class="panel" id="mineScreen" class="screen active">
 <div class="coin" id="balance">0 DC</div>
+<button class="btn" onclick="mine()">MINE DARKCOIN</button>
+</div>
 
-<center>
-<button onclick="tap()">MINE DARKCOIN</button>
-</center>
+<div class="screen" id="marketScreen">
+<h2>NFT MARKET</h2>
+<table>
+<tr><th>Item</th><th>Price DC</th><th>Action</th></tr>
+<tr><td>Skull NFT</td><td>10</td><td><button onclick="buy(10)">Buy</button></td></tr>
+<tr><td>Dark Badge</td><td>25</td><td><button onclick="buy(25)">Buy</button></td></tr>
+<tr><td>Cyber Ring</td><td>50</td><td><button onclick="buy(50)">Buy</button></td></tr>
+</table>
+</div>
 
-<div class="nav">
-<div onclick="alert('Mining')">Mine</div>
-<div onclick="alert('NFT Market')">NFT</div>
-<div onclick="alert('Profile')">Profile</div>
+<div class="screen" id="profileScreen">
+<h2>PROFILE</h2>
+<table>
+<tr><td>Balance</td><td id="pbal">0</td></tr>
+<tr><td>Level</td><td id="lvl">1</td></tr>
+<tr><td>Total Mined</td><td id="total">0</td></tr>
+</table>
+</div>
+
+<div class="menu">
+<div onclick="show('mineScreen')">Mine</div>
+<div onclick="show('marketScreen')">NFT Market</div>
+<div onclick="show('profileScreen')">Profile</div>
 </div>
 
 <script>
 let tg = window.Telegram.WebApp;
 tg.expand();
 
-let coins = 0;
-function tap(){
- coins++;
- document.getElementById("balance").innerHTML = coins+" DC";
+let coins=0,total=0,level=1;
+
+function mine(){
+coins++;
+total++;
+if(total%50==0) level++;
+update();
 }
+
+function buy(price){
+if(coins>=price){
+coins-=price;
+alert("NFT Purchased!");
+update();
+}else{
+alert("Not enough DC");
+}
+}
+
+function update(){
+document.getElementById("balance").innerText=coins+" DC";
+document.getElementById("pbal").innerText=coins;
+document.getElementById("total").innerText=total;
+document.getElementById("lvl").innerText=level;
+}
+
+function show(id){
+document.querySelectorAll(".screen").forEach(s=>s.classList.remove("active"));
+document.getElementById(id).classList.add("active");
+}
+
+/* MATRIX BACKGROUND */
+const c=document.getElementById("bg");
+const ctx=c.getContext("2d");
+c.width=window.innerWidth;
+c.height=window.innerHeight;
+
+let letters="☠ DARKCOIN 010101".split("");
+let font=16;
+let columns=c.width/font;
+let drops=Array(columns).fill(1);
+
+function draw(){
+ctx.fillStyle="rgba(0,0,0,0.1)";
+ctx.fillRect(0,0,c.width,c.height);
+ctx.fillStyle="white";
+ctx.font=font+"px monospace";
+
+for(let i=0;i<drops.length;i++){
+let text=letters[Math.floor(Math.random()*letters.length)];
+ctx.fillText(text,i*font,drops[i]*font);
+if(drops[i]*font>c.height&&Math.random()>0.975)drops[i]=0;
+drops[i]++;
+}
+}
+setInterval(draw,50);
 </script>
 
 </body>
