--- a/game.html
+++ b/game.html
@@ -1,252 +1,200 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>DarkCoin</title>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <style>
-*{margin:0;padding:0;font-family:Inter,monospace;color:white}
-body{background:black;overflow:hidden}
+body {
+    margin:0;
+    font-family: Arial, sans-serif;
+    background:black;
+    color:white;
+    overflow:hidden;
+}
 
-/* MATRIX SKULL BACKGROUND */
+/* Matrix background */
 canvas{
-position:fixed;inset:0;z-index:-1;
+    position:fixed;
+    top:0;left:0;
+    z-index:-1;
 }
 
-/* HEADER */
+/* Header */
 header{
-text-align:center;
-padding:14px;
-font-size:26px;
-letter-spacing:6px;
-border-bottom:1px solid white;
+    text-align:center;
+    font-size:22px;
+    letter-spacing:4px;
+    padding:12px;
+    border-bottom:1px solid white;
 }
 
-/* MAIN PANEL */
-.panel{
-text-align:center;
-margin-top:60px;
-}
-
-/* COIN CORE */
+/* Main coin */
 .coin{
-width:180px;height:180px;
-border:3px solid white;
-border-radius:50%;
-margin:auto;
-display:flex;
-align-items:center;
-justify-content:center;
-font-size:26px;
-animation:spin 8s linear infinite, pulse 2s infinite;
-}
-@keyframes spin{100%{transform:rotate(360deg)}}
-@keyframes pulse{
-0%{box-shadow:0 0 0 white}
-50%{box-shadow:0 0 30px white}
-100%{box-shadow:0 0 0 white}
+    width:180px;
+    height:180px;
+    border-radius:50%;
+    border:3px solid white;
+    margin:40px auto;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:28px;
+    animation:glow 2s infinite alternate, spin 12s linear infinite;
 }
 
-/* BUTTON */
-.btn{
-margin-top:30px;
-padding:14px 60px;
-border:2px solid white;
-background:black;
-font-size:18px;
-cursor:pointer;
-transition:.2s;
+/* Buttons */
+button{
+    background:black;
+    border:1px solid white;
+    color:white;
+    padding:12px 30px;
+    font-size:14px;
+    cursor:pointer;
+    margin:8px;
 }
-.btn:hover{background:white;color:black}
-
-/* MENU */
-.menu{
-position:fixed;
-bottom:0;left:0;right:0;
-display:flex;
-justify-content:space-around;
-padding:10px;
-border-top:1px solid white;
-background:black;
-font-size:14px;
+button:hover{
+    background:white;
+    color:black;
 }
-.menu div{cursor:pointer;opacity:.6}
-.menu div:hover{opacity:1}
-<div onclick="show('exchangeScreen')">Exchange</div>
-<div onclick="show('leaderScreen')">Top</div>
 
-/* SCREENS */
-.screen{display:none;padding:20px}
-.active{display:block}
-<div class="screen" id="exchangeScreen">
-<h2>EXCHANGE</h2>
-<p>DC Price: <span id="price">0.01</span></p>
-<button onclick="alert('Coming soon')">Swap DC → USDT</button>
-</div>
+/* Tabs */
+nav{
+    position:fixed;
+    bottom:0;
+    width:100%;
+    display:flex;
+    border-top:1px solid white;
+}
+nav button{
+    flex:1;
+    border:none;
+    border-right:1px solid white;
+    padding:14px;
+}
 
-<div class="screen" id="leaderScreen">
-<h2>LEADERBOARD</h2>
-<table>
-<tr><th>User</th><th>DC</th></tr>
-<tr><td>You</td><td id="lb1">0</td></tr>
-<tr><td>Player2</td><td>523</td></tr>
-<tr><td>Player3</td><td>331</td></tr>
-</table>
-</div>
+/* Panels */
+.panel{
+    display:none;
+    padding:20px;
+}
+.panel.active{
+    display:block;
+}
 
-/* TABLE */
+/* Table */
 table{
-width:100%;
-border-collapse:collapse;
-margin-top:20px;
+    width:100%;
+    border-collapse:collapse;
 }
 td,th{
-border:1px solid white;
-padding:8px;
-text-align:center;
+    border:1px solid white;
+    padding:8px;
 }
 
-/* GLITCH TEXT */
-.glitch{
-font-size:28px;
-font-weight:bold;
-position:relative;
-display:inline-block;
+/* Animations */
+@keyframes glow{
+    from{box-shadow:0 0 10px white;}
+    to{box-shadow:0 0 40px white;}
 }
-.glitch::before,.glitch::after{
-content:"DARKCOIN";
-position:absolute;left:0;top:0;
-opacity:.6;
+@keyframes spin{
+    from{transform:rotateY(0deg);}
+    to{transform:rotateY(360deg);}
 }
-.glitch::before{color:#0ff;animation:gl1 1s infinite}
-.glitch::after{color:#f0f;animation:gl2 1.2s infinite}
-@keyframes gl1{0%{transform:translate(0)}50%{transform:translate(-2px,2px)}}
-@keyframes gl2{0%{transform:translate(0)}50%{transform:translate(2px,-2px)}}
 </style>
 </head>
 
 <body>
 
-<canvas id="bg"></canvas>
+<canvas id="matrix"></canvas>
 
-<header class="glitch">DARKCOIN</header>
+<header>DARKCOIN</header>
 
-<div class="panel" id="mineScreen" class="screen active">
-<div class="coin" id="balance">0 DC</div>
-<button class="btn" onclick="mine()">MINE DARKCOIN</button>
+<div id="minePanel" class="panel active">
+    <div class="coin" id="coin">0 DC</div>
+    <div style="text-align:center;">
+        <button onclick="mine()">MINE DARKCOIN</button>
+    </div>
 </div>
 
-<div class="screen" id="marketScreen">
-<h2>NFT MARKET</h2>
-<table>
-<tr><th>Item</th><th>Price DC</th><th>Action</th></tr>
-<tr><td>Skull NFT</td><td>10</td><td><button onclick="buy(10)">Buy</button></td></tr>
-<tr><td>Dark Badge</td><td>25</td><td><button onclick="buy(25)">Buy</button></td></tr>
-<tr><td>Cyber Ring</td><td>50</td><td><button onclick="buy(50)">Buy</button></td></tr>
-</table>
+<div id="marketPanel" class="panel">
+    <h2>NFT Market</h2>
+    <table>
+        <tr><th>NFT</th><th>Price DC</th><th>Buy</th></tr>
+        <tr><td>Skull NFT</td><td>10</td><td><button onclick="buy(10)">BUY</button></td></tr>
+        <tr><td>Dark Badge</td><td>25</td><td><button onclick="buy(25)">BUY</button></td></tr>
+        <tr><td>Cyber King</td><td>50</td><td><button onclick="buy(50)">BUY</button></td></tr>
+    </table>
 </div>
 
-<div class="screen" id="profileScreen">
-<h2>PROFILE</h2>
-<table>
-<tr><td>Balance</td><td id="pbal">0</td></tr>
-<tr><td>Level</td><td id="lvl">1</td></tr>
-<tr><td>Total Mined</td><td id="total">0</td></tr>
-</table>
+<div id="profilePanel" class="panel">
+    <h2>Profile</h2>
+    <p>Balance: <span id="balance">0</span> DC</p>
+    <p>NFT Owned: <span id="nfts">0</span></p>
 </div>
 
-<div class="menu">
-<div onclick="show('mineScreen')">Mine</div>
-<div onclick="show('marketScreen')">NFT Market</div>
-<div onclick="show('profileScreen')">Profile</div>
-</div>
+<nav>
+    <button onclick="show('minePanel')">Mine</button>
+    <button onclick="show('marketPanel')">Market</button>
+    <button onclick="show('profilePanel')">Profile</button>
+</nav>
 
 <script>
-let tg = window.Telegram.WebApp;
-tg.expand();
-
-let coins=0,total=0,level=1;
+let dc = 0;
+let nft = 0;
 
 function mine(){
-coins++;
-total++;
-if(total%50==0) level++;
-update();
+    dc++;
+    update();
 }
 
 function buy(price){
-if(coins>=price){
-coins-=price;
-alert("NFT Purchased!");
-update();
-}else{
-alert("Not enough DC");
-}
+    if(dc >= price){
+        dc -= price;
+        nft++;
+        alert("NFT Purchased!");
+        update();
+    } else {
+        alert("Not enough DarkCoin");
+    }
 }
 
 function update(){
-function update(){
-document.getElementById("balance").innerText=coins+" DC";
-document.getElementById("pbal").innerText=coins;
-document.getElementById("total").innerText=total;
-document.getElementById("lvl").innerText=level;
-document.getElementById("lb1").innerText=coins;
-save();
-}
+    document.getElementById("coin").innerHTML = dc + " DC";
+    document.getElementById("balance").innerHTML = dc;
+    document.getElementById("nfts").innerHTML = nft;
 }
 
 function show(id){
-document.querySelectorAll(".screen").forEach(s=>s.classList.remove("active"));
-document.getElementById(id).classList.add("active");
+    document.querySelectorAll(".panel").forEach(p=>p.classList.remove("active"));
+    document.getElementById(id).classList.add("active");
 }
 
-/* MATRIX BACKGROUND */
-const c=document.getElementById("bg");
-const ctx=c.getContext("2d");
-c.width=window.innerWidth;
-c.height=window.innerHeight;
+/* Matrix background */
+const c = document.getElementById("matrix");
+const ctx = c.getContext("2d");
+c.width = window.innerWidth;
+c.height = window.innerHeight;
 
-let letters="☠ DARKCOIN 010101".split("");
-let font=16;
-let columns=c.width/font;
-let drops=Array(columns).fill(1);
+const letters = "DARKCOIN101010";
+const font = 16;
+const cols = c.width / font;
+const drops = Array.from({length:cols}).fill(1);
 
 function draw(){
-ctx.fillStyle="rgba(0,0,0,0.1)";
-ctx.fillRect(0,0,c.width,c.height);
-ctx.fillStyle="white";
-ctx.font=font+"px monospace";
-
-for(let i=0;i<drops.length;i++){
-let text=letters[Math.floor(Math.random()*letters.length)];
-ctx.fillText(text,i*font,drops[i]*font);
-if(drops[i]*font>c.height&&Math.random()>0.975)drops[i]=0;
-drops[i]++;
-}
+    ctx.fillStyle="rgba(0,0,0,0.05)";
+    ctx.fillRect(0,0,c.width,c.height);
+    ctx.fillStyle="white";
+    ctx.font=font+"px monospace";
+    drops.forEach((y,i)=>{
+        const text = letters[Math.floor(Math.random()*letters.length)];
+        ctx.fillText(text,i*font,y*font);
+        if(y*font > c.height && Math.random()>0.975) drops[i]=0;
+        drops[i]++;
+    });
 }
 setInterval(draw,50);
-// SAVE DATA
-function save(){
-localStorage.setItem("darkcoin",JSON.stringify({coins,total,level}));
-}
-function load(){
-let d=JSON.parse(localStorage.getItem("darkcoin"));
-if(d){
-coins=d.coins;
-total=d.total;
-level=d.level;
-update();
-}
-}
-load();
-
-// Fake price
-let price=0.01;
-setInterval(()=>{
-price += (Math.random()-0.5)*0.001;
-document.getElementById("price").innerText=price.toFixed(4)+" USDT";
-},2000);
 </script>
 
 </body>
